--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             </form>
         </section>
 
-        <section class="booking-section">
+        <section class="booking-section" style="display: none;">
             <h2>Book a Classroom</h2>
             <form id="booking-form">
                 <div class="form-group">
