--- a/index.html
+++ b/index.html
@@ -7,14 +7,8 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <header class="header">
+    <section class="login-section">
         <div class="container">
-            <h1>Classroom Booking System</h1>
-        </div>
-    </header>
-
-    <div class="container">
-        <section class="login-section">
             <h2>Login</h2>
             <form id="login-form">
                 <div class="form-group">
@@ -27,58 +21,44 @@
                 </div>
                 <button type="submit" class="btn btn-login">Login</button>
             </form>
-        </section>
-
-        <section class="booking-section" style="display: none;">
-            <h2>Book a Classroom</h2>
-            <form id="booking-form">
-                <div class="form-group">
-                    <label for="name">Name:</label>
-                    <input type="text" id="name" name="name" required>
-                </div>
-                <div class="form-group">
-                    <label for="date">Date:</label>
-                    <input type="date" id="date" name="date" required>
-                </div>
-                <div class="form-group">
-                    <label for="time">Time:</label>
-                    <input type="time" id="time" name="time" required>
-                </div>
-                <div class="form-group">
-                    <label for="classroom">Classroom:</label>
-                    <select id="classroom" name="classroom" required>
-                        <option value="room1">Room 1</option>
-                        <option value="room2">Room 2</option>
-                        <option value="room3">Room 3</option>
-                    </select>
-                </div>
-                <button type="submit" class="btn btn-book">Book Classroom</button>
-            </form>
-        </section>
-
-        <section class="booked-rooms">
-            <h2>Booked Rooms</h2>
-            <ul id="booked-list"></ul>
-        </section>
-
-        <section class="classroom-management">
-            <h2>Classroom Management</h2>
-            <form id="classroom-form">
-                <div class="form-group">
-                    <label for="new-classroom">Add Classroom:</label>
-                    <input type="text" id="new-classroom" name="new-classroom" required>
-                </div>
-                <button type="submit" class="btn btn-add">Add</button>
-            </form>
-            <ul id="classroom-list"></ul>
-        </section>
-    </div>
-
-    <footer class="footer">
-        <div class="container">
-            <p>&copy; 2024 Classroom Booking System. All rights reserved.</p>
         </div>
-    </footer>
+    </section>
+
+    <section class="main-section" style="display: none;">
+        <header class="header">
+            <div class="container">
+                <h1>Classroom Booking System</h1>
+            </div>
+        </header>
+
+        <div class="container">
+            <section class="booking-section">
+                <h2>Book a Classroom</h2>
+                <form id="booking-form">
+                    <!-- Booking form content -->
+                </form>
+            </section>
+
+            <section class="booked-rooms">
+                <h2>Booked Rooms</h2>
+                <ul id="booked-list"></ul>
+            </section>
+
+            <section class="classroom-management">
+                <h2>Classroom Management</h2>
+                <form id="classroom-form">
+                    <!-- Classroom management form content -->
+                </form>
+                <ul id="classroom-list"></ul>
+            </section>
+        </div>
+
+        <footer class="footer">
+            <div class="container">
+                <p>&copy; 2024 Classroom Booking System. All rights reserved.</p>
+            </div>
+        </footer>
+    </section>
 
     <script src="script.js"></script>
 </body>
